tests/ui/conditional-compilation/cfg-attr-syntax-validation.stderr
error: `cfg` is not followed by parentheses
  --> $DIR/cfg-attr-syntax-validation.rs:1:1
   |
LL | #[cfg]
   | ^^^^^^
   |
help: expected syntax is
   |
LL | #[cfg()]
   |      ++

error: `cfg` is not followed by parentheses
  --> $DIR/cfg-attr-syntax-validation.rs:4:1
   |
LL | #[cfg = 10]
   | ^^^^^^^^^^^
   |
help: expected syntax is
   |
LL | #[(cfg = 10)]
   |   +        +

error: `cfg` predicate is not specified
  --> $DIR/cfg-attr-syntax-validation.rs:7:1
   |
LL | #[cfg()]
   | ^^^^^^^^
   |
help: expected syntax is
   |
LL | #[cfg(/* predicate */)]
   |       +++++++++++++++

error: multiple `cfg` predicates are specified
  --> $DIR/cfg-attr-syntax-validation.rs:10:10
   |
LL | #[cfg(a, b)]
   |          ^

error: `cfg` predicate key cannot be a literal
  --> $DIR/cfg-attr-syntax-validation.rs:13:7
   |
LL | #[cfg("str")]
   |       ^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/cfg-attr-syntax-validation.rs:16:7
   |
LL | #[cfg(a::b)]
   |       ^^^^

error[E0537]: invalid predicate `a`
  --> $DIR/cfg-attr-syntax-validation.rs:19:7
   |
LL | #[cfg(a())]
   |       ^^^

error[E0565]: literal in `cfg` predicate value must be a string
  --> $DIR/cfg-attr-syntax-validation.rs:22:11
   |
LL | #[cfg(a = 10)]
   |           ^^

error[E0565]: literal in `cfg` predicate value must be a string
  --> $DIR/cfg-attr-syntax-validation.rs:25:11
   |
LL | #[cfg(a = b"hi")]
   |           -^^^^
   |           |
   |           help: consider removing the prefix

error: attribute value must be a literal
  --> $DIR/cfg-attr-syntax-validation.rs:28:9
   |
LL | #[cfg = a]
   |         ^

error: `cfg` is not followed by parentheses
  --> $DIR/cfg-attr-syntax-validation.rs:45:5
   |
LL |     #![cfg]
   |     ^^^^^^^
   |
help: expected syntax is
   |
LL |     #![cfg()]
   |           ++

error: `cfg` is not followed by parentheses
  --> $DIR/cfg-attr-syntax-validation.rs:46:5
   |
LL |     #![cfg = 10]
   |     ^^^^^^^^^^^^
   |
help: expected syntax is
   |
LL |     #![(cfg = 10)]
   |        +        +

error: `cfg` predicate is not specified
  --> $DIR/cfg-attr-syntax-validation.rs:47:5
   |
LL |     #![cfg()]
   |     ^^^^^^^^^
   |
help: expected syntax is
   |
LL |     #![cfg(/* predicate */)]
   |            +++++++++++++++

error: expected unsuffixed literal, found `expr` metavariable
  --> $DIR/cfg-attr-syntax-validation.rs:36:25
   |
LL |         #[cfg(feature = $expr)]
   |                         ^^^^^
...
LL | generate_s10!(concat!("nonexistent"));
   | ------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `generate_s10` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition name: `a`
  --> $DIR/cfg-attr-syntax-validation.rs:31:7
   |
LL | #[cfg(a)]
   |       ^ help: found config with similar value: `target_feature = "a"`
   |
   = help: expected names are: `FALSE` and `test` and 31 more
   = help: to expect this configuration use `--check-cfg=cfg(a)`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default

error: aborting due to 14 previous errors; 1 warning emitted

Some errors have detailed explanations: E0537, E0565.
For more information about an error, try `rustc --explain E0537`.
